--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="#experience">Experience</a>
         <a href="#skills">Skills</a>
         <a href="#contact">Contact</a>
+        <a href="#test">Test</a>
       </nav>
     </header>
     <main>
