--- a/index.html
+++ b/index.html
@@ -8,21 +8,74 @@
   </head>
   <body>
     <header>
-      <img src="/css/picofme.png" alt="Profil Foto" width="200" height="200" />
-      <h1 class="page_name">Sevket Ersan</h1>
-      <button>Home</button>
-      <button>Kontakt</button>
+      <h1 class="page_name">S. Ersan</h1>
+
       <nav>
-        <a href="#experience">Experience</a>
-        <a href="#skills">Skills</a>
-        <a href="#contact">Contact</a>
-        <a href="#test">Test</a>
+        <ul class="navigation">
+          <li class="navigation_link"><a href="#experience">Experience</a></li>
+          <li class="navigation_link"><a href="#works">Works</a></li>
+          <li class="navigation_link"><a href="#skills">Skills</a></li>
+          <li class="navigation_link"><a href="#contact">Contact</a></li>
+        </ul>
       </nav>
     </header>
     <main>
-      <section>
-        <h2 id="experience">My Experience</h2>
-        <p></p>
+      <section class="profil">
+        <img
+          src="/css/picofme.png"
+          alt="Profil Foto"
+          width="400"
+          height="400"
+        />
+        <section class="sidebar">
+          <p class="text">Hi! I am Şevket Erşan.</p>
+          <p class="text">An Architect and a software developer</p>
+          <p class="blacktext">based in Germany.</p>
+          <p class="quote">
+            ... passionate architect and monument conservator living in
+            Düsseldorf, Germany. On its way to become a sofware developer to
+            support the Digitisation of the construction industry.
+          </p>
+        </section>
+      </section>
+
+      <section class="cv">
+        <section class="experience">
+          <h2 id="experience">My Experience</h2>
+          <p class="experience">
+            Lorem Ipsum comes from a latin text written in 45BC by Roman
+            statesman, lawyer, scholar, and philosopher, Marcus Tullius Cicero.
+            The text is titled "de Finibus Bonorum et Malorum" which means "The
+            Extremes of Good and Evil". The most common form of Lorem ipsum is
+            the following:
+          </p>
+        </section>
+        <section class="works">
+          <h2 id="works">Works</h2>
+          <p class="works">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum. The text is a
+            corrupted version of the original and therefore does not mean
+            anything in particular. The book however where it originates
+            discusses the philosophical views of Epicureanism, Stoicism, and the
+            Platonism of Antiochus of Ascalon.
+          </p>
+        </section>
+        <section class="skills">
+          <h2 id="skills">Skills</h2>
+          <p class="skills">
+            Lorem ipsum is widely in use since the 14th century and up to today
+            as the default dummy "random" text of the typesetting and web
+            development industry. In fact not only it has survived the test of
+            time but it thrived and can be found in many software products, from
+            Microsoft Word to WordPress.
+          </p>
+        </section>
       </section>
     </main>
   </body>
